@@ -3,3 +3,9 @@
 Implementation of a simple Photo viewer with zoom-functions and a slide-show mode
 
 University Project using Java 15 and JavaFX 15
+
+Note for using project in Intelij IDEA:
+To use JavaFX 15 with Intelij IDEA it is required to add the following settings to the VM-Options (in configuration)
+```
+--module-path /PATH/TO/JAVAFX/BIN/DIR --add-modules javafx.controls,javafx.fxml
+```
